# quotesboard

./: .env.template  .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml
.github/workflows/: testing.yaml
app/: __init__.py  auth.py  database.py  main.py  urls.py
app/alembic/: env.py
app/api/: __init__.py
app/api/v1/: __init__.py  author.py  quote.py
app/core/: logging.py  settings.py
app/templates/: index.html
app/templates/partials/: quote_fragment.html
tests/: conftest.py
tests/api/: __init__.py
tests/api/v1/: __init__.py  test_author.py  test_quote.py
